Correction of tag end

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button class="calc-button">.</button>
                 <button class="calc-button">=</button>
             </div>
-        </div>
+        </section>
     </div>
 
     <script src="script.js"></script>
