Removing unused class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="calc-button">1</button>
                 <button class="calc-button">2</button>
                 <button class="calc-button">3</button>
-                <button class="calc-button vertical-double">+</button>
+                <button class="calc-button">+</button>
             </div>
             <div class="calc-buttons-row">
                 <button class="calc-button horizontal-double">0</button>
